add name&title section

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="fav-icon.png" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/sections/name-title/name-title-styles.css">
     <title>Ahmed Osama Tantawy</title>
-
 </head>
 
 <body>
-    <h1>Hello world</h1>
+
 </body>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </html>
