--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="shortcut icon" href="fav-icon.png" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/sections/name-title/name-title-styles.css">
+    <link rel="stylesheet" href="/sections/about-me/about-me-styles.css">
     <title>Ahmed Osama Tantawy</title>
 </head>
 
 <body>
+
 
 </body>
     <script src="index.js" type="module"></script>
