add skills section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/sections/name-title/name-title-styles.css">
     <link rel="stylesheet" href="/sections/about-me/about-me-styles.css">
+    <link rel="stylesheet" href="/sections/skills/skills-styles.css">
     <title>Ahmed Osama Tantawy</title>
 </head>
 
