--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="fav-icon.png" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/partials/navbar/navbar-styles.css">
     <link rel="stylesheet" href="/sections/name-title/name-title-styles.css">
     <link rel="stylesheet" href="/sections/about-me/about-me-styles.css">
     <link rel="stylesheet" href="/sections/skills/skills-styles.css">
