--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="fav-icon.png" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/partials/navbar/navbar-styles.css">
+    <link rel="stylesheet" href="/partials/footer/footer-styles.css">
     <link rel="stylesheet" href="/sections/name-title/name-title-styles.css">
     <link rel="stylesheet" href="/sections/about-me/about-me-styles.css">
     <link rel="stylesheet" href="/sections/skills/skills-styles.css">
@@ -15,8 +16,6 @@
 </head>
 
 <body>
-
-
 </body>
     <script src="index.js" type="module"></script>
 </html>
