--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="fav-icon.png" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="/partials/navbar/navbar-styles.css">
-    <link rel="stylesheet" href="/partials/footer/footer-styles.css">
-    <link rel="stylesheet" href="/sections/name-title/name-title-styles.css">
-    <link rel="stylesheet" href="/sections/about-me/about-me-styles.css">
-    <link rel="stylesheet" href="/sections/skills/skills-styles.css">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/partials/navbar/navbar-styles.css" />
+    <link rel="stylesheet" href="/partials/footer/footer-styles.css" />
+    <link rel="stylesheet" href="/sections/name-title/name-title-styles.css" />
+    <link rel="stylesheet" href="/sections/about-me/about-me-styles.css" />
+    <link rel="stylesheet" href="/sections/skills/skills-styles.css" />
     <title>Ahmed Osama Tantawy</title>
     <script src="index.js" type="module"></script>
-</head>
+  </head>
 
-<body>
-</body>
+  <body></body>
 </html>
